--- a/index.html
+++ b/index.html
@@ -11,12 +11,44 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 
-<!-- STYLES  -->
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/styles.css">
-
+  <!-- STYLES  -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <!-- SITE HEADER  -->
+    <header class="site-header">
+      <!-- SITE-HEADER-TOP  -->
+      <div class="site-header-top">
+        <div class="site-header-top-container container">
+          <!-- SITE-HEADER-LOGO -->
+          <a class="site-header-logo" href="index.html">
+            <img class="logo-img" src="img/logo-purple.svg" alt="" width="264" height="28">
+          </a>
+          <!-- CURRENCY RATES  -->
+          <ul class="currency-rates">
+            <li class="currency-rite-item">
+              <b class="currency-rite-type">$</b>
+              <span class="currency-rates-value">11300.56</span>
+            </li>
+            <li class="currency-rite-item">
+              <b class="currency-rite-type">Р</b>
+              <span class="currency-rates-value">112.5</span>
+            </li>
+          </ul>
 
+          <!-- GLOBAL-SEARCH-FORM  -->
+
+          <!-- LANGUAGE-TOGGLE  -->
+          <div class="lang-toggle">
+            <a class="lang-toggle-link lang-toggle-link-active" href="index.html">УЗ</a>
+            <a class="lang-toggle-link" href="index.html/ru">РУ</a>
+          </div>
+
+          <!-- SITE-HEADER-AUTH  -->
+          <a class="button button-primary" href="#">Войти</a>
+        </div>
+      </div>
+    </header>
 </body>
 </html>
