Add global search form and focus styles

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
           <!-- GLOBAL-SEARCH-FORM  -->
 
+          <form class="global-search-form" action="https://echo.htmlacademy.ru" method="GET">
+            <input class="global-search-form-input" type="search" name="search" placeholder="ПОИСК" aria-label="ПОИСК" required>
+          </form>
+
           <!-- LANGUAGE-TOGGLE  -->
           <div class="lang-toggle">
             <a class="lang-toggle-link lang-toggle-link-active" href="index.html">УЗ</a>
