Add site nav and site header banner

--- a/index.html
+++ b/index.html
@@ -53,6 +53,33 @@
           <a class="button button-primary" href="#">Войти</a>
         </div>
       </div>
+
+      <div class="container">
+        <!-- SITE NAV  -->
+        <div class="site-nav">
+          <ul class="site-nav-list">
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Главное</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Интересное</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Экономика</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Политика</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Общество</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Технологии</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Спорт</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Культура</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Происшествия</a></li>
+            <li class="site-nav-item"><a href="" class="site-nav-link">Наука</a></li>
+          </ul>
+        </div>
+
+        <!-- SITE HEADER BANNER  -->
+
+        <aside class="site-header-banner">
+          <a class="site-header-banner-link" href="#" target="_blank">
+            <img class="site-header-banner-img" src="img/shopme-banner.jpg" width="1200" height="128" alt="ShopME banner" srcset="img/shopme-banner.jpg 1x, img/shopme-banner@2x.jpg 2x">
+          </a>
+        </aside>
+
+      </div>
     </header>
 </body>
 </html>
