Add notification cta

--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@
             </article>
           </div>
         </section>
+
+        <!-- NOTIFIACTION CTA -->
+        <section class="notification-cta">
+          <div class="notification-cta-text">
+            Хотите быть в курсе свежих новостей?  <br>Включите уведомления!
+          </div>
+          <button class="button button-orange" type="button">Включитъ</button>
+        </section>
       </div>
     </main>
 </body>
